# node-cp2102n

./: .npmignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
addon/: CMakeLists.txt
addon/cp2102n_node/: CMakeLists.txt
addon/cp2102n_node/src/: async.h  cp2102n.c  cp2102n.cc  cp2102n.h  promised_async.h  utils.h
addon/libcp2102_usb/: CMakeLists.txt
addon/libcp2102_usb/src/: cp2102_libusb.c  tty_utils_darwin.c  tty_utils_linux.c
src/: binding.ts  index.ts
